added latest projects

--- a/index.html
+++ b/index.html
@@ -73,31 +73,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </section>
 <section class="projectContainer">
     <p class="darkerText headerText"> Latest Projects </p> 
-    <div class="projectItem">
-        <div>
-            <p class="darkerText">Apr 17,2024</p>
-            <p>Dinosour app that generates custom dinosours</p>
-
-        </div>
-        <div class="linkContainer">
-            <a target="_blank" href="https://www.swolenormous.smoljames.com" class="linkItem">
-                <div>
-                    <i class="fa-brands fa-github"></i>
-                </div>
-                <p class="">GitHub</p>
-            </a>
-            <a target="_blank" href="https://www.swolenormous.smoljames.com" class="linkItem">
-                <div>
-                    <i class="fa-solid fa-bolt"></i>
-                </div>
-                <p class="">Live</p>
-            </a>
-        </div>
-        <div>
-            <img src="/public/dino.png" alt="Dinosour-img" />
-        </div>
-
-    </div>
+   
 
     <div class="projectItem">
         <div>
@@ -122,7 +98,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <div class="projectItem">
         <div>
             <p class="darkerText">Oct 6,2023</p>
-            <p>Created a twitter clone using MERN stack.</p>
+            <p>Created a Twitter clone.</p>
 
         </div>
         <div class="linkContainer">
@@ -142,6 +118,99 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div>
             <img src="/public/WhatsApp Image 2024-04-18 at 3.15.51 PM.jpeg" alt="Dinosour-img" />
+        </div>
+
+    </div>
+
+    <!-- <div class="projectItem">
+        <div>
+            <p class="darkerText">Apr 17,2024</p>
+            <p>Dinosour app that generates custom dinosours</p>
+
+        </div>
+        <div class="linkContainer">
+            <a target="_blank" href="https://www.swolenormous.smoljames.com" class="linkItem">
+                <div>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+            </a>
+            <a target="_blank" href="https://www.swolenormous.smoljames.com" class="linkItem">
+                <div>
+                    <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+            </a>
+        </div>
+        <div>
+            <img src="/public/dino.png" alt="Dinosour-img" />
+        </div>
+
+    </div> -->
+
+    <div class="projectItem">
+        <div>
+            <p class="darkerText">Dec 17,2023</p>
+            <p>This web app is made using websockets that allow 2-way communication between users.</p>
+
+        </div>
+        <div class="linkContainer">
+            <a target="_blank" href="https://github.com/Amna-Shafiq/Django-ChatApp" class="linkItem">
+                <div>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+            </a>
+        </div>
+        <div>
+            <img src="/public/dino.png" alt="Dinosour-img" />
+        </div>
+
+    </div>
+
+    <div class="projectItem">
+        <div>
+            <p class="darkerText">Aug 1,2023</p>
+            <p>Created an Instagram Clone, user can create profile, upload stories, posts, write comments, like and message each other.</p>
+
+        </div>
+        <div class="linkContainer">
+            <a target="_blank" href="https://github.com/Amna-Shafiq/InstagramClone-RubyonRails" class="linkItem">
+                <div>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+            </a>
+        </div>
+        <div>
+            <img src="/public/dino.png" alt="Dinosour-img" />
+        </div>
+
+    </div>
+
+    <div class="projectItem">
+        <div>
+            <p class="darkerText">Aug 1,2023</p>
+            <p>Build your custom resume using this resume builder.</p>
+           
+
+        </div>
+        <div class="linkContainer">
+            <a target="_blank" href="https://github.com/Amna-Shafiq/Resume-Generator-React" class="linkItem">
+                <div>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+            </a>
+            <a target="_blank" href="https://resume-generator-react-chi.vercel.app/" class="linkItem">
+                <div>
+                    <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+            </a>
+        </div>
+        <div>
+            <img src="/public/resume.PNG" alt="Dinosour-img" />
         </div>
 
     </div>
